# allgebra-repository-template

./: .gitignore  CMakeLists.txt  CMakeLists_8txt.html  Doxyfile  README.md  dir_68267d1309a1af8e8297ef4c3efbcdba.html  docker-compose.yml  dot_8cpp.html  dot_8cpp__incl.map  dot_8cpp__incl.md5  dot_8hpp.html  dot_8hpp__dep__incl.map  dot_8hpp__dep__incl.md5  dot_8hpp_source.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  test_8cpp.html  test_8cpp__incl.map  test_8cpp__incl.md5
.github/workflows/: cmake.yml  cpp.yml
search/: all_1.js  all_2.js  all_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  searchdata.js
src/: CMakeLists.txt  dot.cpp  dot.hpp  test.cpp
